--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         @apply -ml-14 rounded-xs text-base w-10 inline-block text-center bg-emerald-950 text-lise py-1.5 mr-4 leading-none;
       }
       .tag {
-        @apply rounded-full px-4 mr-2 text-[12px] bg-lise text-darklise py-1 leading-none font-normal;
+        @apply rounded-full px-4 mr-2 mt-1 text-[11px] bg-lise text-darklise py-[2px] leading-none font-normal inline-block;
       }
       p {
         font-family: "Source Sans", source-sans, system-ui, non-serif;
@@ -382,10 +382,7 @@
           <component :is="`h${entry.level+1}`" class=""
             >{{ entry.name }}</component
           >
-          <div
-            v-if="entry.conformance || entry.understanding !==''"
-            class="infobox"
-          >
+          <div v-if="entry.conformance" class="infobox">
             <div
               v-if="entry.conformance"
               class="conformance"
@@ -541,6 +538,7 @@
                 if (entry.level == 1) {
                   return true;
                 }
+                if (selectedPerspective.value == "show all") return true;
                 return (
                   entry.tags &&
                   entry.tags.some((tag) => selectedPerspective.value === tag)
