feat: added dependecy

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./assets/tailwind.js"></script>
-    <!-- <script src="./node_modules/tailwindcss/dist/chunk-AZANAYY2.mjs"></script> -->
+    <!-- <script src="./assets/tailwind.js"></script> -->
+    <script src="./node_modules/tailwindcss/dist/chunk-AZANAYY2.mjs"></script>
     <!-- <link rel="stylesheet" href="./style.css" /> -->
     <script src="./assets/tailwindstyles.js"></script>
     <title>lise WCAG 2.2 Guide</title>
@@ -230,8 +230,9 @@
         </section>
       </main>
     </div>
-    <script src="./node_modules/vue/dist/vue.global.js"></script>
+    <!-- <script src="./node_modules/vue/dist/vue.global.js"></script> -->
 
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script>
       const { createApp, ref, computed, onMounted, watch } = Vue;
 
