--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="./assets/tailwind.js"></script> -->
-    <script src="./node_modules/tailwindcss/dist/chunk-AZANAYY2.mjs"></script>
+    <!-- <script src="./node_modules/tailwindcss/dist/chunk-AZANAYY2.mjs"></script> -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
     <!-- <link rel="stylesheet" href="./style.css" /> -->
     <script src="./assets/tailwindstyles.js"></script>
     <title>lise WCAG 2.2 Guide</title>
