feat: added link to right position

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <script src="./assets/tailwindstyles.js"></script>
     <title>lise WCAG 2.2 Guide</title>
   </head>
-  <body class="">
+  <body class="absolute">
+    <a
+      class="mx-auto absolute top-4 left-4 block underline cursor-pointer text-lise text-xs"
+      href="bfsg-relevanz.html"
+    >
+      Ist mein Projekt betroffen?
+    </a>
     <div
       class="md:absolute top-40 md:top-20 w-2/5 md:w-1/5 h-8 flex flex-col items-center"
     >
@@ -28,12 +34,7 @@
       >
         auf deutsch umschalten
       </button>
-      <a
-        class="mx-auto block underline cursor-pointer text-lise text-xs"
-        href="bfsg-relevanz.html"
-      >
-        BFSG-Relevanz
-      </a>
+
       <header
         class="mx-auto my-8 text-white bg-teal-950 p-8 rounded-xl text-left flex flex-col md:flex-row"
       >
