--- a/bfsg-relevanz.html
+++ b/bfsg-relevanz.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markdown Laden mit Vue</title>
+    <title>BFSG Betroffenheit</title>
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
@@ -18,6 +18,9 @@
   <body>
     <div id="app" class="mx-auto">
       <main>
+        <a class="navButton" href="index.html">
+                Zurück zur Startseite
+        </a>
         <div v-html="renderedMarkdown"></div>
       </main>
     </div>
