Update index.html Textänderung zu geschlechtsneutraler Formulierung nach Hinweis in CoP)

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
               WCAG 2.2 Guide
             </h1>
             <p v-if="lang==='de'" class="!text-sm leading-loose mt-4 md:pr-8">
-              Ein WCAG Reiseführer entwickelt mit Herzblut von den Mädels und
-              Jungs der lise. Diese Dokument basiert auf der
+              Ein WCAG Reiseführer entwickelt mit Herzblut von den Menschen in der lise. Diese Dokument basiert auf der
 
               <a
                 class="underline"
@@ -33,7 +32,7 @@
               >
             </p>
             <p v-else class="!text-sm leading-loose mt-4 md:pr-8">
-              A hitchhikers guide to WCAG by the girls and boys working at lise.
+              A hitchhikers guide to WCAG by the people at lise.
               This document is based on
               <a
                 class="underline"
