--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </a>
             </li>
             <li>
-              <a class="navButton" href="bfsg-relevanz.html">
+              <a class="navButton" href="tools-plugins.html">
                 Community Of Practice BFSG
               </a>
             </li>
