--- a/index.html
+++ b/index.html
@@ -55,13 +55,8 @@
               </a>
             </li>
             <li>
-              <a class="navButton" href="bfsg-relevanz.html">
-                Tools & Plugins in der Lise
-              </a>
-            </li>
-            <li>
               <a class="navButton" href="tools-plugins.html">
-                Community Of Practice BFSG
+                Tools & Plugins in der lise
               </a>
             </li>
             <li>
